Load File Type Data

--- a/introduction-to-tensorflow/9_load-file-data.ipynb
+++ b/introduction-to-tensorflow/9_load-file-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "round-music",
+   "id": "pediatric-pierce",
    "metadata": {},
    "source": [
     "# **Load CSV and NumPy File Types in TensorFlow 2.0**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offshore-compatibility",
+   "id": "danish-financing",
    "metadata": {},
    "source": [
     "**Learning Objectives**\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apart-stretch",
+   "id": "korean-garbage",
    "metadata": {},
    "source": [
     "## **Introduction**\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adopted-nudist",
+   "id": "athletic-transparency",
    "metadata": {},
    "source": [
     "## **Load necessary libraries**"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "hungry-estate",
+   "id": "humanitarian-lincoln",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-healing",
+   "id": "average-track",
    "metadata": {},
    "source": [
     "Data can be loaded from an URL using `tf.keras.utils.get_file()`"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fabulous-messenger",
+   "id": "durable-restriction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "hollywood-percentage",
+   "id": "political-glossary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diverse-badge",
+   "id": "developmental-deployment",
    "metadata": {},
    "source": [
     "## **Load data**"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arranged-survivor",
+   "id": "certified-alfred",
    "metadata": {},
    "source": [
     "This section provides an example of how to load CSV data from a file into a `tf.data.Dataset`. The data used in this tutorial are taken from the Titanic passenger list. The model will predict the likelihood a passenger survived based on characteristics like age, geneder, ticket class, and whether the person was travelling alone."
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-malawi",
+   "id": "electrical-staff",
    "metadata": {},
    "source": [
     "To start, let's look at the top of the CSV file to see how it is formatted."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "intensive-democracy",
+   "id": "subject-begin",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-lesbian",
+   "id": "afraid-holmes",
    "metadata": {},
    "source": [
     "We can load this using Pandas, and pass the NumPy arrays to TensorFlow. If we need to scale up to a large set of files, or need a loader that integrates with TensorFlow and `tf.data`, then we can use the `tf.data.experimental.make_csv_dataset()` function"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-piano",
+   "id": "precious-philadelphia",
    "metadata": {},
    "source": [
     "The only column we need to identify explicitly is the one with the value that the model is intended to predict."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "clinical-associate",
+   "id": "opening-portable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-there",
+   "id": "pleasant-aerospace",
    "metadata": {},
    "source": [
     "Now let's read the CSV data from the file and create a data set."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "competent-survivor",
+   "id": "employed-shareware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "phantom-pierre",
+   "id": "recent-affairs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assumed-fight",
+   "id": "mathematical-indicator",
    "metadata": {},
    "source": [
     "Each item in the data set is a **batch**, represented as a tuple of `(examples, labels)`. The data from the examples is organised in column-based tensors (rather than row-based tensors), each with as many elements as the `batch_size`."
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "advised-spider",
+   "id": "stuffed-married",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-nightlife",
+   "id": "appreciated-rehabilitation",
    "metadata": {},
    "source": [
     "As we can see, the columns in the CSV are named. The data set constructor will pick these names up automatically. If the file we are working with does not contain the columns names in the first line, we shall pass them as a list of `str` to the `column_names` argument in the `tf.data.experimental.make_csv_dataset()` function."
@@ -261,8 +261,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "congressional-mathematics",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex                 : [b'male' b'male' b'male' b'male' b'male']\n",
+      "age                 : [20. 28. 19. 26. 22.]\n",
+      "n_siblings_spouses  : [0 0 0 0 0]\n",
+      "parch               : [0 0 0 0 0]\n",
+      "fare                : [ 8.05  15.5    7.65   7.896  9.35 ]\n",
+      "class               : [b'Third' b'Third' b'Third' b'Third' b'Third']\n",
+      "deck                : [b'unknown' b'unknown' b'F' b'unknown' b'unknown']\n",
+      "embark_town         : [b'Southampton' b'Queenstown' b'Southampton' b'Southampton' b'Southampton']\n",
+      "alone               : [b'y' b'y' b'y' b'y' b'y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "CSV_COLUMNS = [\"survived\", \"sex\", \"age\", \"n_siblings_spouses\", \"parch\", \n",
+    "               \"fare\", \"class\", \"deck\", \"embark_town\", \"alone\"]\n",
+    "\n",
+    "# Pass column names as a list of `str` to the column_names argument\n",
+    "temp_dataset = get_dataset(train_file_path, column_names=CSV_COLUMNS)\n",
+    "\n",
+    "show_batch(temp_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "qualified-participation",
+   "metadata": {},
+   "source": [
+    "This example is going to use all the available column. If we would like to omit some columns from the data set, we shall create a list of just the columns we plan to use, and pass it into the (optional) `select_columns` argument of the constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aerial-component",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age                 : [35. 25. 32. 62. 51.]\n",
+      "n_siblings_spouses  : [0 0 0 0 0]\n",
+      "class               : [b'Third' b'Third' b'Third' b'Second' b'Third']\n",
+      "deck                : [b'unknown' b'unknown' b'unknown' b'unknown' b'unknown']\n",
+      "alone               : [b'y' b'y' b'y' b'y' b'y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we need to omit some columns from the data set, we shall create a list of \n",
+    "# just the columns we plan to use, and pass it into the (optional) `select_columns` argument of the constructor\n",
+    "SELECT_COLUMNS = [\"survived\", \"age\", \"n_siblings_spouses\", \"class\", \"deck\", \"alone\"]\n",
+    "\n",
+    "temp_dataset = get_dataset(train_file_path, select_columns=SELECT_COLUMNS)\n",
+    "\n",
+    "show_batch(temp_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "brave-pottery",
+   "metadata": {},
+   "source": [
+    "## **Data preprocessing**"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "hydraulic-capacity",
+   "id": "quality-survey",
    "metadata": {},
    "outputs": [],
    "source": []
