Load File Type and NumPy data

--- a/introduction-to-tensorflow/9_load-file-and-numpy-data.ipynb
+++ b/introduction-to-tensorflow/9_load-file-and-numpy-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "vanilla-crossing",
+   "id": "official-citizenship",
    "metadata": {},
    "source": [
     "# **Load CSV and NumPy File Types in TensorFlow 2.0**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-occurrence",
+   "id": "empirical-interference",
    "metadata": {},
    "source": [
     "**Learning Objectives**\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-fossil",
+   "id": "pressing-daughter",
    "metadata": {},
    "source": [
     "## **Introduction**\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-trial",
+   "id": "local-basin",
    "metadata": {},
    "source": [
     "## **Load necessary libraries**"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "retained-doctrine",
+   "id": "personal-battle",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-research",
+   "id": "blocked-coalition",
    "metadata": {},
    "source": [
     "Data can be loaded from an URL using `tf.keras.utils.get_file()`"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "printable-liability",
+   "id": "freelance-rally",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "valued-header",
+   "id": "primary-hardwood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-block",
+   "id": "developed-robinson",
    "metadata": {},
    "source": [
     "## **Load data**"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assured-criterion",
+   "id": "elect-george",
    "metadata": {},
    "source": [
     "This section provides an example of how to load CSV data from a file into a `tf.data.Dataset`. The data used in this tutorial are taken from the Titanic passenger list. The model will predict the likelihood a passenger survived based on characteristics like age, geneder, ticket class, and whether the person was travelling alone."
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extra-complaint",
+   "id": "thermal-temperature",
    "metadata": {},
    "source": [
     "To start, let's look at the top of the CSV file to see how it is formatted."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "valid-direction",
+   "id": "equal-pillow",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-heath",
+   "id": "fresh-courage",
    "metadata": {},
    "source": [
     "We can load this using Pandas, and pass the NumPy arrays to TensorFlow. If we need to scale up to a large set of files, or need a loader that integrates with TensorFlow and `tf.data`, then we can use the `tf.data.experimental.make_csv_dataset()` function"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guilty-samba",
+   "id": "opponent-seventh",
    "metadata": {},
    "source": [
     "The only column we need to identify explicitly is the one with the value that the model is intended to predict."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "apart-sponsorship",
+   "id": "looking-coast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-translation",
+   "id": "tested-glance",
    "metadata": {},
    "source": [
     "Now let's read the CSV data from the file and create a data set."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "beginning-paradise",
+   "id": "special-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "former-taste",
+   "id": "subject-merchandise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immune-certification",
+   "id": "little-marathon",
    "metadata": {},
    "source": [
     "Each item in the data set is a **batch**, represented as a tuple of `(examples, labels)`. The data from the examples is organised in column-based tensors (rather than row-based tensors), each with as many elements as the `batch_size`."
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "crude-photographer",
+   "id": "experienced-nightlife",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accomplished-fancy",
+   "id": "changing-sitting",
    "metadata": {},
    "source": [
     "As we can see, the columns in the CSV are named. The data set constructor will pick these names up automatically. If the file we are working with does not contain the columns names in the first line, we shall pass them as a list of `str` to the `column_names` argument in the `tf.data.experimental.make_csv_dataset()` function."
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "proof-computer",
+   "id": "classified-relaxation",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imposed-palestine",
+   "id": "ranking-terrain",
    "metadata": {},
    "source": [
     "This example is going to use all the available column. If we would like to omit some columns from the data set, we shall create a list of just the columns we plan to use, and pass it into the (optional) `select_columns` argument of the constructor."
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "premier-painting",
+   "id": "accessory-cardiff",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-partnership",
+   "id": "organized-description",
    "metadata": {},
    "source": [
     "## **Data preprocessing**"
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amazing-viking",
+   "id": "primary-prefix",
    "metadata": {},
    "source": [
     "A CSV file can contain a variety of data types. Typically we want to convert from those mixed types to a fixed length vector before feeding the data into our model."
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endangered-astronomy",
+   "id": "blocked-paradise",
    "metadata": {},
    "source": [
     "TensorFlow has a built-in system for describing common input conversions: `tf.feature_column`."
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "photographic-piece",
+   "id": "martial-brazilian",
    "metadata": {},
    "source": [
     "We can preprocess data using any tool we like (like [nltk](https://www.nltk.org/) or [sklearn](https://scikit-learn.org/stable/)), and just pass the processed output to TensorFlow."
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-moderator",
+   "id": "optimum-house",
    "metadata": {},
    "source": [
     "The primary advantage of doing preprocessing inside the model is that when we export the model it includes the preprocessing. This way we can pass the raw data directly to the model."
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selective-composite",
+   "id": "comparative-therapy",
    "metadata": {},
    "source": [
     "### **Continuous data**"
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-beach",
+   "id": "thirty-silver",
    "metadata": {},
    "source": [
     "If the data is already in an appropriate numeric format, we can pack the data into a vector before passing it off to the model:"
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "mexican-dinner",
+   "id": "structural-organ",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "intended-warning",
+   "id": "quick-equivalent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-vampire",
+   "id": "composite-orleans",
    "metadata": {},
    "source": [
     "Here's a simple function that will pack together all the columns"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "proof-valuation",
+   "id": "higher-banks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strong-bearing",
+   "id": "capital-pilot",
    "metadata": {},
    "source": [
     "Apply this to each element of the data set"
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "chronic-province",
+   "id": "qualified-negative",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrow-separate",
+   "id": "sticky-humidity",
    "metadata": {},
    "source": [
     "If we have mixed data types we may want to separate out these simple-numeric fields. The `tf.feature_column` API can handle them, but this incurs some overhead and should be avoided unless really necessary. Let's switch back to the mixed data set:"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "double-offering",
+   "id": "expected-silly",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "brief-reynolds",
+   "id": "express-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-interim",
+   "id": "maritime-suicide",
    "metadata": {},
    "source": [
     "So define a more general preprocessor that selects a list of numeric features and pack them into a single column:"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "alleged-kazakhstan",
+   "id": "announced-stevens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "vanilla-windsor",
+   "id": "changed-pregnancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bridal-collar",
+   "id": "dedicated-childhood",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "pregnant-baker",
+   "id": "grave-prison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breathing-alexandria",
+   "id": "specified-plaza",
    "metadata": {},
    "source": [
     "**Data Normalisation**"
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-express",
+   "id": "excessive-majority",
    "metadata": {},
    "source": [
     "Continuous data should **always be normalised**."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "parental-newport",
+   "id": "electoral-liability",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "complex-asset",
+   "id": "national-somerset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fourth-sterling",
+   "id": "prerequisite-reply",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "bright-theory",
+   "id": "acoustic-cambridge",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worldwide-segment",
+   "id": "advisory-liberty",
    "metadata": {},
    "source": [
     "Now let's create a numeric column. The `tf.feature_columns.numeric_column()` API accepts a `normalizer_fn` argument, which will be run on each batch."
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-expansion",
+   "id": "olive-fortune",
    "metadata": {},
    "source": [
     "Bind the `MEAN` and `STD` variables to the `normalizer_fn` using `functools.partial`"
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "standard-effect",
+   "id": "billion-jumping",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-forestry",
+   "id": "exposed-beijing",
    "metadata": {},
    "source": [
     "When we train the model, we shall include this feature column to select and center this block of numeric data:"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "protected-aberdeen",
+   "id": "environmental-dance",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "considered-garbage",
+   "id": "emotional-myanmar",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggressive-resource",
+   "id": "boring-penny",
    "metadata": {},
    "source": [
     "The mean-based normalisation used here requires knowing the means of each column ahead of time."
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-pasta",
+   "id": "dress-dietary",
    "metadata": {},
    "source": [
     "### **Categorical data**"
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quantitative-temperature",
+   "id": "boring-contractor",
    "metadata": {},
    "source": [
     "Some of the columns in the CSV data are categorical columns. That is, the content should be one of a limited set of options."
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chemical-collector",
+   "id": "focused-basketball",
    "metadata": {},
    "source": [
     "Let's use the `tf.feature_column` API to create a collection with a `tf.feature_column.indicator_column` for each categorical column."
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "close-maker",
+   "id": "compliant-italy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "prescribed-postage",
+   "id": "annoying-charles",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "higher-vienna",
+   "id": "paperback-celtic",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "further-aquatic",
+   "id": "burning-potter",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executive-simpson",
+   "id": "closed-burns",
    "metadata": {},
    "source": [
     "This will be part of a data processing input layer when we build the model."
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrong-bacon",
+   "id": "coordinate-bahrain",
    "metadata": {},
    "source": [
     "### **Combined preprocessing layer**"
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-capacity",
+   "id": "elegant-milton",
    "metadata": {},
    "source": [
     "Let's add the two `feature_column` collections and pass them to a `tf.keras.layers.DenseFeatures()` to create an input layer that will extract and preprocess both input types:"
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "collective-teens",
+   "id": "integrated-musical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "uniform-reducing",
+   "id": "completed-marks",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlled-university",
+   "id": "given-procedure",
    "metadata": {},
    "source": [
     "### **Next Step**"
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-perth",
+   "id": "asian-candidate",
    "metadata": {},
    "source": [
     "A next step would be to build a `tf.keras.Sequential` neural network model, starting with a `preprocessing_layer`."
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precious-arrival",
+   "id": "stopped-reward",
    "metadata": {},
    "source": [
     "## **Load NumPy data**"
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empty-consolidation",
+   "id": "frank-young",
    "metadata": {},
    "source": [
     "### **Load necessary libraries**"
@@ -1085,11 +1085,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "selective-addiction",
+   "execution_count": 1,
+   "id": "hairy-isaac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sustainable-copyright",
+   "metadata": {},
+   "source": [
+    "### **Load data from `.npz` file**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "young-accessory",
+   "metadata": {},
+   "source": [
+    "We use the `MNIST` data set in Keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "chubby-variable",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 5s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "DATA_URL = \"https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\"\n",
+    "\n",
+    "# `tf.keras.utils.get_file()` downloads a file from an URL if it is not already in cache\n",
+    "path = tf.keras.utils.get_file(\"mnist.npz\", DATA_URL)\n",
+    "with np.load(path) as data:\n",
+    "    train_examples = data[\"x_train\"]\n",
+    "    train_labels = data[\"y_train\"]\n",
+    "    test_examples = data[\"x_test\"]\n",
+    "    test_labels = data[\"y_test\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "isolated-lindsay",
+   "metadata": {},
+   "source": [
+    "## **Load NumPy arrays with `tf.data.Dataset`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "suburban-choir",
+   "metadata": {},
+   "source": [
+    "Assuming you have an array of examples and a corresponding array of labels, pass the two arrays as a tuple into `tf.data.Dataset.from_tensor_slices()` to create a `tf.data.Dataset`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "expected-setting",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# With the help of `tf.data.Dataset.from_tensor_slices()` method, we can get the slices of an array in the form of objects\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((train_examples, train_labels))\n",
+    "test_dataset = tf.data.Dataset.from_tensor_slices((test_examples, test_labels))"
+   ]
   }
  ],
  "metadata": {
