--- a/introduction-to-tensorflow/10_load-images-tf-data.ipynb
+++ b/introduction-to-tensorflow/10_load-images-tf-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "intellectual-subsection",
+   "id": "thousand-forestry",
    "metadata": {},
    "source": [
     "# **Loading Images Using `tf.data.Dataset`**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medical-membership",
+   "id": "committed-breast",
    "metadata": {},
    "source": [
     "**Learning objectives**\n",
@@ -22,16 +22,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afraid-disease",
+   "id": "bizarre-oriental",
    "metadata": {},
    "source": [
     "## **Introduction**"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dimensional-tribute",
+   "metadata": {},
+   "source": [
+    "In this notebook, we load an image data set using `tf.data`. The data set used in this example is distributed as directories of images, with one class of image per directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "developing-probe",
+   "metadata": {},
+   "source": [
+    "### **Setup**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "divine-signal",
+   "metadata": {},
+   "source": [
+    "### **Load necessary libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stock-merchant",
+   "id": "accessible-essay",
    "metadata": {},
    "outputs": [],
    "source": []
