--- a/introduction-to-tensorflow/5_basic-intro-logistic-regression.ipynb
+++ b/introduction-to-tensorflow/5_basic-intro-logistic-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "current-exemption",
+   "id": "plastic-california",
    "metadata": {},
    "source": [
     "# **Basic introduction to Logistic Regression in TensorFlow 2.0**\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "vulnerable-curve",
+   "id": "incorporate-princess",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fantastic-father",
+   "id": "eleven-engagement",
    "metadata": {},
    "source": [
     "## **The Iris classification problem**\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "existing-framework",
+   "id": "delayed-communications",
    "metadata": {},
    "source": [
     "### **Import and parse the training data set**\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-firewall",
+   "id": "cross-suspect",
    "metadata": {},
    "source": [
     "#### **Download the data set**"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "chinese-charlotte",
+   "id": "dress-rwanda",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stable-variance",
+   "id": "speaking-witness",
    "metadata": {},
    "source": [
     "#### **Inspect the data**\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "technical-trinity",
+   "id": "binary-patch",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-gather",
+   "id": "banned-sweden",
    "metadata": {},
    "source": [
     "Note the following:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aquatic-serbia",
+   "id": "contemporary-violation",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-following",
+   "id": "random-vitamin",
    "metadata": {},
    "source": [
     "Each label is associated with a string name (e.g. `setosa`), but ML typically relies on *numeric values*. The label numbers are mapped to a named representation, such as:\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "settled-printing",
+   "id": "thirty-roberts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-sweden",
+   "id": "russian-miami",
    "metadata": {},
    "source": [
     "#### **Create a tf.data.Dataset**\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "quantitative-agent",
+   "id": "excited-producer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-correction",
+   "id": "twelve-victory",
    "metadata": {},
    "source": [
     "The `make_csv_dataset` function returs a `tf.data.Dataset` of `(features, label)` pairs, where `features` is a `dict`: `{\"feature_name\": value}`.\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "premium-formation",
+   "id": "exempt-spotlight",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-maryland",
+   "id": "african-atmosphere",
    "metadata": {},
    "source": [
     "Like-features are grouped together, or *batched*. Each example row's fields are appended to the corresponding feature array. The `batch_size` parameter controls the number of examples stored in the feature arrays. Let's have a look at some plots."
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "appreciated-roommate",
+   "id": "running-robertson",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-harvest",
+   "id": "suffering-clinic",
    "metadata": {},
    "source": [
     "To simplify the model building step, create a function to repackage the features `dict` into a single array with shape: `(batch_size, num_features)`. This function uses the `tf.stack` method which takes values from a list of tensors and creates a combined tensor at the specified dimension."
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "determined-retention",
+   "id": "cheap-isaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-zealand",
+   "id": "recovered-kingston",
    "metadata": {},
    "source": [
     "Then use the `tf.data.Dataset` `map` method to pack the `features` of each `(features, label)` pair into the training dataset."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "specified-horse",
+   "id": "violent-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powerful-powell",
+   "id": "flying-majority",
    "metadata": {},
    "source": [
     "The features element of the `tf.data.Dataset` are now arrays with shape `(batch_size, num_features)`. Let's have a look at a few examples."
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "processed-genealogy",
+   "id": "personalized-anime",
    "metadata": {},
    "outputs": [
     {
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-mixture",
+   "id": "simple-conjunction",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "republican-shark",
+   "id": "foster-throw",
    "metadata": {},
    "source": [
     "### **Select the type of model**\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-tours",
+   "id": "eleven-revolution",
    "metadata": {},
    "source": [
     "#### **Select the model**\n",
@@ -407,14 +407,14 @@
     "\n",
     "It's a highly-structured graph, organised into one or more *hidden layers*. Each hidden layer consists of one or more *neurons*. There are several categories of neural networks and this program uses a *dense*, or *fully-connected* neural network: neurons in one layer receive input connections from *every* neuron in the previous layer. Below example of a dense neural network consisting of an input layer, two hidden layers and an output layer.\n",
     "\n",
-    "<center><img src=\"img/fully-connected-net.png\" width=700 height=700><\\center>\n",
+    "<center><img src=\"img/fully-connected-net.png\" width=\"700\" height=\"700\"><\\center>\n",
     "\n",
     "When this model is trained and fed an unlabeled example, it yields three predictions: the likelihood that this flower is the given Iris species. This prediction is called *inference*. For this example, the sum of the output prediction is `1.0`. Here, the model predicts that the fed unlabeled example flower is an *Iris versicolor* with $95~\\%$ probability."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "careful-spokesman",
+   "id": "pharmaceutical-delicious",
    "metadata": {},
    "source": [
     "#### **Create a model using `tf.keras.Sequential`**\n",
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emerging-token",
+   "id": "impaired-workstation",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "roman-satellite",
+   "id": "alone-cattle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "social-sellers",
+   "id": "gross-spoke",
    "metadata": {},
    "source": [
     "#### **Using the model**\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "uniform-illinois",
+   "id": "southwest-seventh",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quiet-final",
+   "id": "french-chester",
    "metadata": {},
    "source": [
     "Here each example returns a `logit` for each class. A **logit** is a vector of raw predictions generated by a classification model, and is generally passed on to a normalised function. If the model is solving a multi-class classification problem, logits are generally fed into the `softmax` function. **softmax** generates a vector of normalised probabilities with one value for each possible class.\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "empirical-printer",
+   "id": "covered-orange",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-madness",
+   "id": "double-native",
    "metadata": {},
    "source": [
     "And taking the `tf.argmax` across classes gives us the predicted class index. "
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "political-baseball",
+   "id": "terminal-nickname",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-western",
+   "id": "tracked-nomination",
    "metadata": {},
    "source": [
     "But the model hasn't been trained yet, so these aren't good predictions. Indeed, the model here predicts that all species are *Iris versicolor*..."
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-procurement",
+   "id": "critical-inspector",
    "metadata": {},
    "source": [
     "### **Train the model**\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "mental-emerald",
+   "id": "disabled-tongue",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-brisbane",
+   "id": "assured-interpretation",
    "metadata": {},
    "source": [
     "Gradients are calculated as vectors of partial derivatives of the model function. The gradient points in the direction of steepest ascent. They're stored within a *context*, using `tf.GradientTape`."
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "domestic-moral",
+   "id": "loved-therapy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prerequisite-arabic",
+   "id": "bronze-understanding",
    "metadata": {},
    "source": [
     "#### **Create an optimiser**\n",
@@ -636,7 +636,7 @@
     "\n",
     "**Gradient descent** is an algorithm used for finding the optimal model configuration (i.e. parameters values) by minimising the model loss thanks to the computation of the gradients of loss with respect to the model parameters, conditioned on training data. Informally, gradient descent iteratively adjusts parameters gradually finding the best combination of weights and bias to minimise loss.\n",
     "\n",
-    "<center><img src=\"img/gradients.gif\" width=500 height=500></center>\n",
+    "<center><img src=\"img/gradients.gif\" width=\"500\" height=\"500\"></center>\n",
     "\n",
     "TensorFlow has many optimisation algorithms available for training. Here we'll use `tf.keras.optimizers.SGD` that implements the *stochastic gradient descent* (SGD) algorithm. **Stochastic gradient descent** is a gradient descent algorithm in which the batch size is equal to $1$, relying on a single example chosen uniformly at random from a data set. The `learning_rate` sets the step size to take for each iteration down the hill. This is a **hyperparameter** that controls the training process itslef and is commonly adjusted to achieve better results.\n",
     "\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "interesting-tractor",
+   "id": "lesbian-authentication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-flight",
+   "id": "described-childhood",
    "metadata": {},
    "source": [
     "Now let's use the optimiser to compute a single optimisation step and see what happens"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "handy-wealth",
+   "id": "facial-pennsylvania",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-laptop",
+   "id": "beautiful-surveillance",
    "metadata": {},
    "source": [
     "#### **Training loop**\n",
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "flush-contact",
+   "id": "welcome-faith",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-airfare",
+   "id": "revised-proxy",
    "metadata": {},
    "source": [
     "#### **Visualise the loss function over time**\n",
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "freelance-hunter",
+   "id": "modular-agriculture",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painted-michael",
+   "id": "hollow-lyric",
    "metadata": {},
    "source": [
     "### **Evaluate the model effectiveness**\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-custom",
+   "id": "complete-reaction",
    "metadata": {},
    "source": [
     "#### **Set up the test data set**\n",
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "disabled-grenada",
+   "id": "casual-greene",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "african-indonesian",
+   "id": "african-cartridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-toyota",
+   "id": "floral-smile",
    "metadata": {},
    "source": [
     "#### **Evaluate the model on the test set**\n",
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "funky-witness",
+   "id": "expired-meeting",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-potter",
+   "id": "approved-delaware",
    "metadata": {},
    "source": [
     "Let's have a look at the last batch"
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "three-thong",
+   "id": "fatal-limitation",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-biotechnology",
+   "id": "ordered-actor",
    "metadata": {},
    "source": [
     "### **Use the trained model to make predictions**\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "backed-labor",
+   "id": "growing-speed",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operational-hunter",
+   "id": "alien-astrology",
    "metadata": {},
    "outputs": [],
    "source": []
